syntax = "proto3";

package devkit.v1;

message UploadFileRequest {
  string path = 1;
  string bucket_name = 2;
  bytes reader = 3;
  string file_type = 4;
}
message UploadFilesRequest {
  repeated UploadFileRequest files = 1;
}

message UploadFileResponse {
  string path = 1;
}
